[tool.nx]
autoActivate = true

[tool.poetry]
name = "botswork"
version = "1.0.0"
description = ""
authors = [ ]
license = "Proprietary"
readme = "README.md"

  [tool.poetry.dependencies]
  python = "~=3.11.5"

    [tool.poetry.dependencies.db]
    path = "libs/db"
    develop = true

    [tool.poetry.dependencies.sso]
    path = "apps/sso"
    develop = true

[build-system]
requires = [ "poetry-core==1.1.0" ]
build-backend = "poetry.core.masonry.api"
