[tool.poetry]
name = "botswork"
version = "1.0.0"
authors = ["zavx0z"]
description = ""
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies.sso]
path = "server/sso"
develop = true

[tool.poetry.dependencies]
python = "^3.11.5"

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
