[tool.poetry]
name = "db"
version = "1.0.0"
description = "Database"
authors = [ ]
license = "Proprietary"
readme = "README.md"
group = { }

  [[tool.poetry.packages]]
  include = "db"

  [tool.poetry.dependencies]
  python = "~=3.11.5"
  python-dotenv = "^1.0.0"
  sqlalchemy = "^2.0.20"
  asyncpg = "^0.28.0"
  passlib = "^1.7.4"
  pydantic = "^2.3.0"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
